--- a/myapp-react/public/index.html
+++ b/myapp-react/public/index.html
@@ -10,7 +10,6 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <script src="%PUBLIC_URL%/neutralino.js"></script>
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -26,6 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <script src="%PUBLIC_URL%/__neutralino_globals.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
